change app_id,handle empty cities list

--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,4 +1,4 @@
-application_id = 'com.github.amit9838'
+application_id = 'com.github.amit9838.weather'
 
 scalable_dir = join_paths('hicolor', 'scalable', 'apps')
 install_data(
