--- a/data/io.github.amit9838.weather.desktop.in
+++ b/data/io.github.amit9838.weather.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=weather
 Exec=weather
-Icon=com.github.amit9838.weather
+Icon=io.github.amit9838.weather
 Terminal=false
 Type=Application
 Categories=GTK;
