--- a/data/io.github.amit9838.weather.appdata.xml.in
+++ b/data/io.github.amit9838.weather.appdata.xml.in
@@ -25,14 +25,16 @@
     <category>Utility</category>
   </categories>
   <content_rating type="oars-1.1" />
-  <release version="0.1.0" date="2023-06-11">
-      <description>
-        <p>New features and updates</p>
-        <ul>
-            <li>Use dynamic gradient backgrounds based on current weather.</li>
-            <li>See forcasts in beautiful card view.</li>
-            <li>Search and add cities.</li>
-        </ul>
-      </description>
-  </release>
+  <releases>
+    <release version="0.1.0" date="2023-06-11">
+        <description>
+          <p>New features and updates</p>
+          <ul>
+              <li>Use dynamic gradient backgrounds based on current weather.</li>
+              <li>See forcasts in beautiful card view.</li>
+              <li>Search and add cities.</li>
+          </ul>
+        </description>
+    </release>
+  </releases>
 </component>
