--- a/data/io.github.amit9838.weather.appdata.xml.in
+++ b/data/io.github.amit9838.weather.appdata.xml.in
@@ -14,6 +14,23 @@
       <li>Search and add cities.</li>
     </ul>
   </description>
+    <screenshots>
+      <screenshot type="default">
+          <image>https://github.com/amit9838/weather/blob/master/screenshots/ss1-overcast_clouds_day.png</image>
+      </screenshot>
+      <screenshot>
+          <image>https://github.com/amit9838/weather/blob/master/screenshots/ss2-haze_night.png</image>
+      </screenshot>
+      <screenshot>
+          <image>https://github.com/amit9838/weather/blob/master/screenshots/ss3-clear_sky_night.png</image>
+      </screenshot>
+        <screenshot>
+          <image>https://github.com/amit9838/weather/blob/master/screenshots/ss4-dark_mode.png</image>
+      </screenshot>
+        <screenshot>
+          <image>https://github.com/amit9838/weather/blob/master/screenshots/ss4-light_mode.png</image>
+      </screenshot>
+  </screenshots>
   <launchable type="desktop-id">io.github.amit9838.weather.desktop</launchable>
   <url type="homepage">https://github.com/amit9838/weather</url>
   <url type="bugtracker">https://github.com/amit9838/weather/issues</url>
