Fix snap packaging
- Fixed missing artifacts in snap version
- Use meson version >=0.61 for compatibility
  in ubuntu 22.04 (current version 0.61.2)
- Update project version to 1.0.1

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,17 +1,22 @@
 name: mousam
-base: core22
+summary: Weather for Linux
+version: git
 adopt-info: mousam
+
 grade: stable
 confinement: strict
+
+base: core22
 architectures:
   - build-on: amd64
   - build-on: arm64
   - build-on: armhf
+
 parts:
   mousam:
-    plugin: meson
     source: https://github.com/amit9838/weather.git
-    #source-tag: 'v1.0.0'
+    source-branch: master
+    plugin: meson
     meson-parameters: [ --prefix=/snap/mousam/current/usr ]
     override-pull: |
       craftctl default
