--- a/data/meson.build
+++ b/data/meson.build
@@ -1,6 +1,6 @@
 desktop_file = i18n.merge_file(
-        input: 'io.github.amit9838.weather.desktop.in',
-       output: 'io.github.amit9838.weather.desktop',
+        input: 'io.github.amit9838.mousam.desktop.in',
+       output: 'io.github.amit9838.mousam.desktop',
          type: 'desktop',
        po_dir: '../po',
       install: true,
@@ -13,8 +13,8 @@ if desktop_utils.found()
 endif
 
 appstream_file = i18n.merge_file(
-        input: 'io.github.amit9838.weather.appdata.xml.in',
-       output: 'io.github.amit9838.weather.appdata.xml',
+        input: 'io.github.amit9838.mousam.appdata.xml.in',
+       output: 'io.github.amit9838.mousam.appdata.xml',
        po_dir: '../po',
       install: true,
   install_dir: join_paths(get_option('datadir'), 'appdata')
@@ -26,7 +26,7 @@ if appstream_util.found()
 endif
 
 
-install_data('io.github.amit9838.weather.gschema.xml',
+install_data('io.github.amit9838.mousam.gschema.xml',
   install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas'),
 )
 
