--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('weather',
+project('mousam',
           version: '1.0.1',
     meson_version: '>= 0.61.0',
   default_options: [ 'warning_level=2', 'werror=false', ],
