--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@ architectures:
 
 parts:
   mousam:
-    source: https://github.com/amit9838/weather.git
+    source: https://github.com/amit9838/mousam.git
     source-depth: 1
     #source-tag: used when there will be a new release with these fixes
     plugin: meson
@@ -22,10 +22,9 @@ parts:
       pip install --prefix=$CRAFT_PART_INSTALL/usr requests==2.30.0
     override-build: |
       craftctl default
-      chmod +x $CRAFT_PART_INSTALL/snap/mousam/current/usr/bin/weather
-      sed -e '1c#!/usr/bin/python3' -i $CRAFT_PART_INSTALL/usr/local/bin/*
-      sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/mousam/current/usr/bin/weather
-    parse-info: [ usr/share/appdata/io.github.amit9838.weather.appdata.xml ]
+      chmod +x $CRAFT_PART_INSTALL/snap/mousam/current/usr/bin/mousam
+      sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/mousam/current/usr/bin/mousam
+    parse-info: [ usr/share/appdata/io.github.amit9838.mousam.appdata.xml ]
     organize:
       snap/mousam/current: .
       usr/local: usr
@@ -37,13 +36,13 @@ slots:
   mousam:
     interface: dbus
     bus: session
-    name: io.github.amit9838.weather
+    name: io.github.amit9838.mousam
 
 apps:
   mousam:
-    command: usr/bin/weather
-    common-id: io.github.amit9838.weather
-    desktop: usr/share/applications/io.github.amit9838.weather.desktop
+    command: usr/bin/mousam
+    common-id: io.github.amit9838.mousam
+    desktop: usr/share/applications/io.github.amit9838.mousam.desktop
     extensions: [ gnome ]
     environment:
       PYTHONPATH: $SNAP/usr/lib/python3.10/dist-packages:$PYTHONPATH
