Update meson build and translation scripts
- Concise the meson build script for icons
- Fix install mode for the mousam binary
- Replace deprecated meson function
  install_subdir with install_emptydir
- Update flatpak builder workflow
- Closed #57 with #65

--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6.3
         with:
-          bundle: io.github.amit9838.weather.flatpak
-          manifest-path: io.github.amit9838.weather.json
+          bundle: io.github.amit9838.mousam.flatpak
+          manifest-path: io.github.amit9838.mousam.json
           cache-key: flatpak-builder-${{ github.sha }}
           arch: ${{ matrix.arch }}
           restore-cache: true
