--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@ subdir('data')
 subdir('src')
 subdir('po')
 
-install_subdir('data/mousam_icons', install_dir: get_option('datadir') / 'icons/hicolor/scalable')
+install_emptydir(get_option('datadir') / 'icons/hicolor/scalable')
 
 gnome.post_install(
      glib_compile_schemas: true,
