--- a/src/meson.build
+++ b/src/meson.build
@@ -23,7 +23,7 @@ configure_file(
   configuration: conf,
   install: true,
   install_dir: get_option('bindir'),
-  install_mode: 'r-xr-xr--'
+  install_mode: 'rwxr-xr--'
 )
 
 mousam_sources = [
