--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -3,13 +3,13 @@
 	<id>io.github.amit9838.mousam.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
-  <name>Weather</name>
+  <name>Mousam</name>
   <summary>Beautiful and lightweight mousam app</summary>
   <description>
     <p>Current Weather conditions and forcasts.</p>
     <p>Features:</p>
     <ul>
-      <li>Displays real-time temperature, humidity, and wind speed,UV index,pressure and more</li>
+      <li>Displays real-time temperature, humidity,wind speed,UV index,pressure and more</li>
       <li>Utilizes graphical representations, such as temperature , precipitation graphs and wind-speed with direction to provide an hourly forecast for the next 24 hours</li>
       <li>Also provides tomorrow and 7-day forcasts</li>
       <li>See conditions in metric or imperial systems</li>
@@ -55,6 +55,19 @@
   </categories>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="1.0.2" date="2024-02-8">
+      <description translatable="no">
+      <p>Bug fixes</p>
+        <ul>
+            <li>Bug fixes related to build</li>
+        </ul>
+        <p>Thanks to</p>
+        <ul>
+            <li>@hsbasu: multiple improvents related to build.</li>
+            <li>@soumyaDghosh: for bug fixes related to snap.</li>
+        </ul>
+      </description>
+      </release>
     <release version="1.0.1" date="2024-01-16">
       <description translatable="no">
       <p>Bug fixes</p>
