Update deb package version
- Read version from deb packaging for
  meson build

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('mousam',
-          version: '1.0.1',
+          version: run_command('dpkg-parsechangelog',  '--show-field', 'Version', check: true).stdout(),
     meson_version: '>= 0.61.0',
   default_options: [ 'warning_level=2', 'werror=false', ],
 )
