Update snap and flatpak build workflows
- Developers can check and test snap
  and flatpak builds before creating a PR

--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -1,11 +1,11 @@
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "**" ]
   pull_request:
     branches: [ "master" ]
     types: [ "review_requested", "ready_for_review" ]
   workflow_dispatch:
-name: Snap
+name: Test Snap packaging
 permissions:
   id-token: write
   contents: read
