--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -1,11 +1,11 @@
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "**" ]
   pull_request:
     branches: [ "master" ]
     types: [ "review_requested", "ready_for_review" ]
   workflow_dispatch:
-name: Flatpak
+name: Test Flatpak packaging
 permissions:
   id-token: write
   contents: read
