--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v4
+      - name: Use source from current branch
+        run: |
+          sed -i 's/source:.*/source: ./g' snap/snapcraft.yaml
       - name: Build Test Mousam Snap
         uses: snapcore/action-build@v1
         id: snapcraft-build
