Fix permission for executable binary
- Remove unnecessary line from snap
  fixing the permission

--- a/src/meson.build
+++ b/src/meson.build
@@ -23,7 +23,7 @@ configure_file(
   configuration: conf,
   install: true,
   install_dir: get_option('bindir'),
-  install_mode: 'rwxr-xr--'
+  install_mode: 'rwxr-xr-x'
 )
 
 mousam_sources = [
