Refactor code and fix binary permission
- Load css from css file instead of
  hard-coding it as python. Provides
  better readability in IDEs
- Remove eol spaces
- Fix inconsistent tab spacing
- Remove excutable permission from mousam.in,
  meson makes it excutable during install for
  all packaging methods

--- a/src/meson.build
+++ b/src/meson.build
@@ -49,16 +49,16 @@ mousam_sources = [
   'frontendUiDrawImageIcon.py',
   'frontendUiDrawPollutionBar.py',
 
-  'application.css',
   'constants.py',
   'units.py',
   'utils.py',
-  'css.py',
   'windowAbout.py',
   'windowPreferences.py',
   'windowLocations.py'
 ]
 
+install_emptydir(moduledir / 'css')
+install_data('css/style.css',install_dir: join_paths(moduledir,'css'))
 install_data(mousam_sources, install_dir: moduledir)
 
 icon_conf = configuration_data()
