--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -55,6 +55,28 @@
   </categories>
   <content_rating type="oars-1.1" />
   <releases>
+     <release version="1.1.0" date="2024-02-24">
+      <description translatable="no">
+        <p>What's New</p>
+        <ul>
+          <li>Dynamic background is back again, app background changes based on current weatehr condition.</li>
+          <li>Show rainfall in inches when using imperial units</li>
+          <li>App is now slimmer </li>
+        </ul>
+        <p>Bug fixes</p>
+        <ul>
+          <li>Fix no internet issues, when external DNS communication is blocked #84</li>
+          <li>Improve air pollution level</li>
+          <li>Improve ui</li>
+        </ul>
+        <p>Thanks to</p>
+        <ul>
+          <li>@hsbasu: for bug fixes related to performance and build.</li>
+          <li>@soumyaDghosh: for bug fixes related to snap.</li>
+          <li>And thanks to the folks who reported issues on GitHub.</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.0.2" date="2024-02-8">
       <description translatable="no">
         <p>Bug fixes</p>
