Added context to repeatedly used strings
I used pgettext to add context to some strings, that were used more than one times, like "low", "moderate" and "high".

And also marked more strings as translatable: current weather, day max.

This commit includes updated Polish translation.

--- a/src/mousam.in
+++ b/src/mousam.in
@@ -33,6 +33,9 @@ sys.path.insert(1, pkgdatadir)
 signal.signal(signal.SIGINT, signal.SIG_DFL)
 locale.bindtextdomain('mousam', localedir)
 locale.textdomain('mousam')
+
+gettext.bindtextdomain('mousam', localedir)
+gettext.textdomain('mousam')
 gettext.install('mousam', localedir)
 
 if __name__ == '__main__':
