appdata: Add developer ID
Flathub requires a developer tag and developer ID.

> A developer tag with a name child tag must be present. Only one developer tag is allowed and the name tag also must be present only once in untranslated form.

```
<developer id="tld.vendor">
  <name>Developer name</name>
</developer>
```
Source: https://docs.flathub.org/docs/for-app-authors/metainfo-guidelines/#name-summary-and-developer-name

--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -43,6 +43,9 @@
   <url type="translate">https://github.com/amit9838/mousam/tree/master/po</url>
   <url type="vcs-browser">https://github.com/amit9838/mousam</url>
   <developer_name>Amit Chaudhary</developer_name>
+  <developer id="io.github.amit9838">
+    <name translate="no">Amit Chaudhary</name>
+  </developer>
   <recommends>
     <control>pointing</control>
     <control>touch</control>
