--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -43,6 +43,9 @@
   <url type="translate">https://github.com/amit9838/mousam/tree/master/po</url>
   <url type="vcs-browser">https://github.com/amit9838/mousam</url>
   <developer_name>Amit Chaudhary</developer_name>
+  <developer id="io.github.amit9838">
+    <name translate="no">Amit Chaudhary</name>
+  </developer>
   <recommends>
     <control>pointing</control>
     <control>touch</control>
@@ -56,7 +59,7 @@
   <content_rating type="oars-1.1" />
   <releases>
      <release version="1.1.0" date="2024-02-24">
-      <description translatable="no">
+      <description translate="no">
         <p>What's New</p>
         <ul>
           <li>Dynamic background is back again, app background changes based on current weather condition.</li>
@@ -78,7 +81,7 @@
       </description>
     </release>
     <release version="1.0.2" date="2024-02-8">
-      <description translatable="no">
+      <description translate="no">
         <p>Bug fixes</p>
         <ul>
           <li>Bug fixes related to build</li>
@@ -91,7 +94,7 @@
       </description>
     </release>
     <release version="1.0.1" date="2024-01-16">
-      <description translatable="no">
+      <description translate="no">
         <p>Bug fixes</p>
         <ul>
           <li>Fix bug where some locations dosen't provide valid co-ordinates</li>
@@ -100,7 +103,7 @@
       </description>
     </release>
     <release version="1.0.0" date="2024-01-14">
-      <description translatable="no">
+      <description translate="no">
         <p>What's New</p>
         <ul>
           <li>Introducing a new design with an entirely new app experience.</li>
@@ -124,7 +127,7 @@
       </description>
     </release>
     <release version="0.6.0" date="2023-07-14">
-      <description translatable="no">
+      <description translate="no">
         <ul>
           <li>Adds air-pollution info</li>
           <li>Adds Snowfall summary</li>
@@ -136,7 +139,7 @@
       </description>
     </release>
     <release version="0.5.0" date="2023-07-05">
-      <description translatable="no">
+      <description translate="no">
         <ul>
           <li>Adds sunset/sunrise info</li>
           <li>Add and remove city more quickly</li>
@@ -147,7 +150,7 @@
       </description>
     </release>
     <release version="0.4.0" date="2023-06-25">
-      <description translatable="no">
+      <description translate="no">
         <ul>
           <li>Adds 5 days forecast</li>
           <li>Adds rain summary (rain quantity)</li>
@@ -158,7 +161,7 @@
       </description>
     </release>
     <release version="0.3.0" date="2023-06-22">
-      <description translatable="no">
+      <description translate="no">
         <ul>
           <li>Show today and tomorrow forecasts</li>
           <li>Option:Use Imerial, Metric systems</li>
@@ -173,7 +176,7 @@
       </description>
     </release>
     <release version="0.2.1" date="2023-06-18">
-      <description translatable="no">
+      <description translate="no">
         <ul>
           <li>Use full country name.</li>
           <li>Fix units.</li>
@@ -183,7 +186,7 @@
       </description>
     </release>
     <release version="0.2.0" date="2023-06-17">
-      <description translatable="no">
+      <description translate="no">
         <p>What's New</p>
         <ul>
           <li>Option:Use Custom api-key.</li>
@@ -196,7 +199,7 @@
       </description>
     </release>
     <release version="0.1.0" date="2023-06-11">
-      <description translatable="no">
+      <description translate="no">
         <p>New features and updates</p>
         <ul>
           <li>Use dynamic gradient backgrounds based on current weather.</li>
