--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/amit9838/ci-cd",
+  "homepage": "https://github.com/amit9838/mousam",
   "name": "weather",
   "private": true,
   "version": "0.0.0",
