improve shortcuts, menu-item and search city page improved ui of search city dialog Added - press enter to search city now menu items also shows shortcut keys Added keyboard shortcuts dialog updated mousam.pot file

--- a/src/meson.build
+++ b/src/meson.build
@@ -54,7 +54,8 @@ mousam_sources = [
   'utils.py',
   'windowAbout.py',
   'windowPreferences.py',
-  'windowLocations.py'
+  'windowLocations.py',
+  'shortcutsDialog.py'
 ]
 
 install_emptydir(moduledir / 'css')
