--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -4,7 +4,7 @@
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
   <name>Mousam</name>
-  <summary>Beautiful and lightweight weather app</summary>
+  <summary>Weather at a Glance</summary>
   <description>
     <p>Current Weather conditions and forcasts.</p>
     <p>Features:</p>
@@ -58,6 +58,26 @@
   </categories>
   <content_rating type="oars-1.1" />
   <releases>
+      <release version="1.3.0" date="2024-06-09">
+      <description translate="no">
+        <p>What's New</p>
+        <ul>
+          <li>Added Option to switch between diffrent time-formats 12h/24h.</li>
+          <li>Now app remembres the window size/state.</li>
+          <li>Improved app startup and wether refresh performance.</li>
+        </ul>
+
+        <p>Translation</p>
+        <ul>
+          <li>Romanian by @georgescutelnicu</li>
+          <li>French  by @SpicyWasab</li>
+        </ul>
+        <p>Thanks to</p>
+        <ul>
+          <li>And thanks to them who reported bug on github issues.</li>
+        </ul>
+      </description>
+    </release>
       <release version="1.2.0" date="2024-05-14">
       <description translate="no">
         <p>What's New</p>
