--- a/data/io.github.amit9838.mousam.desktop.in
+++ b/data/io.github.amit9838.mousam.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=Mousam
 Exec=mousam
-Comment=Beautiful and lightweight weather app
+Comment=Weather at a Glance
 Icon=io.github.amit9838.mousam
 Terminal=false
 Type=Application
 Categories=Application;Utility;GTK;
-Keywords=Weather;Mousam;Rain;Cloud;Forecast;
+Keywords=Weather;Mousam;Rain;Cloud;Forecast;GTK4;Python;temperature;
 StartupNotify=true
