--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -4,7 +4,7 @@
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
   <name>Mousam</name>
-  <summary>Weather at a Glance</summary>
+  <summary>Weather at a glance</summary>
   <description>
     <p>Current Weather conditions and forcasts.</p>
     <p>Features:</p>
@@ -62,6 +62,23 @@
   </categories>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="1.3.2" date="2024-6-30">
+      <description translate="no">
+        <p>What's New</p>
+        <ul>
+          <li>New app icon, Thanks to @bertob</li>
+        </ul>
+        <p>Bug fixes</p>
+        <ul>
+          <li>Fix issue where sunset/sunrise time always was always displayed in 12H format.</li>
+          <li>Fix sun rotation to work with 12H and 24H format.</li>
+        </ul>
+        <p>Translation</p>
+        <ul>
+          <li>Updated Hindi translation thanks to @Scrambled777</li>
+        </ul>
+      </description>
+    </release>
       <release version="1.3.1" date="2024-6-10">
       <description translate="no">
         <p>Bug fixes</p>
