snap: update for `core24`

--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -16,14 +16,12 @@ jobs:
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v4
-      - name: Use source from current branch
-        run: |
-          sed -i 's/source:.*/source: ./g' snap/snapcraft.yaml
       - name: Build Test Mousam Snap
         uses: snapcore/action-build@v1
         id: snapcraft-build
         with:
           snapcraft-args: "-v"
+          path: build-aux
       - uses: actions/upload-artifact@v4
         with:
           name: mousam-snap
