--- a/data/io.github.amit9838.mousam.appdata.xml.in
+++ b/data/io.github.amit9838.mousam.appdata.xml.in
@@ -22,7 +22,7 @@
       </screenshot>
       <screenshot>
           <image>https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss2.png</image>
-          <caption>Snofall - day</caption>
+          <caption>Snowfall - day</caption>
       </screenshot>
         <screenshot>
           <image>https://raw.githubusercontent.com/amit9838/mousam/master/screenshots/ss3.png</image>
